--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,31 @@
 {
     "version": 2,
+    "env": {
+    },
     "builds": [
       {
-        "src": "server.js",
-        "use": "@now/node"
+        "src": "backend/build/index.js",
+        "use": "@vercel/node",
+        "config": { "includeFiles": ["backend/build/**"] }
+      },
+      {
+        "src": "ui/build/**",
+        "use": "@vercel/static",
+        "config": { "includeFiles": ["ui/build/**"] }
       }
     ],
     "routes": [
       {
-        "src": "/(.*)",
-        "dest": "server.js"
+        "src": "/api/(.*)",
+        "dest": "backend/build/index.js"
+      },
+      {
+        "src": "/",
+        "dest": "ui/build/index.html"
+      },
+      {
+        "src": "/(.+)",
+        "dest": "ui/build/$1"
       }
     ]
   }
